[package]
name = "reqlog"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["headers", "http2", "multipart"] }
tokio = { version = "1.12", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
axum-macros = "0.3"
headers = "0.3"
log = "0.4"
env_logger = "0.9"
